src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Batch_Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The batch job that processd the credit note for the flagged leave</description>
        <label>Batch Jobs</label>
        <referenceTo>Batch_Jobs__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Leave_Cretits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the order items was for</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_Total__c</fullName>
        <formula>UnitPrice  * 
Quantity * 
CASE( PricebookEntry.Product2.ProductCode , 
   &apos;Monday&apos;, BLANKVALUE(Stall__r.MondayMultiplier__c,1), 
   &apos;Tuesday&apos;, BLANKVALUE(Stall__r.TuesdayMultiplier__c,1) , 
   &apos;Wednesday&apos;, BLANKVALUE(Stall__r.WednesdayMultiplier__c,1) , 
   &apos;Thursday&apos;, BLANKVALUE(Stall__r.ThursdayMultiplier__c,1), 
   &apos;Friday&apos;, BLANKVALUE(Stall__r.FridayMultiplier__c,1), 
   &apos;Saturday&apos;, BLANKVALUE(Stall__r.SaturdayMultiplier__c,1), 
   &apos;Sunday&apos;, BLANKVALUE(Stall__r.SundayMultiplier__c,1),1) *   BLANKVALUE(Order.Opportunity.Uplift_Factor__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags if the trader is on leave for this order item. If this is true then the space will be available for casual traders.</description>
        <label>On Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickBooksId__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooksId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Total__c</fullName>
        <description>Turns Leave lines into negative values</description>
        <formula>IF( Leave__c , -1 *  Total__c ,Total__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stall</label>
        <referenceTo>Stall__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_GST__c</fullName>
        <formula>IF( PricebookEntry.Product2.GST_Inclusive__c = false ,1.1, 1) *  Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (GST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To be used instead of  Total Price for the total line price</description>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>